--- a/ulliboy/index.html
+++ b/ulliboy/index.html
@@ -19,6 +19,7 @@
             transition-duration: 1s;
             height: 15vw;
             width: 15vw;
+            background: #fff;
         }
 
         
@@ -55,6 +56,7 @@
 
         .loading {
             background: transparent url('images/loading.gif') center no-repeat;
+            background-size: 50px auto;
         }
     </style>
 
