--- a/ulliboy/index.html
+++ b/ulliboy/index.html
@@ -19,7 +19,8 @@
             transition-duration: 1s;
             height: 15vw;
             width: 15vw;
-            background: #fff;
+            background: #fff url('images/loading.gif') center no-repeat;
+            background-size: 50px auto;
         }
 
         
@@ -53,11 +54,6 @@
             }
 
         }
-
-        .loading {
-            background: transparent url('images/loading.gif') center no-repeat;
-            background-size: 50px auto;
-        }
     </style>
 
 </head>
@@ -65,7 +61,6 @@
 <img height=100px src="images/ulliboy.gif" alt="">
 
 <div class="image-container" id="image-container">
-    <div class="loading"></div>
 </div>
 
 <script>
@@ -90,11 +85,18 @@
   ]
   const container = document.querySelector('#image-container')
 
-  document.addEventListener('DOMContentLoaded', function() {
-    container.innerHTML = ''
-    for (let image of images) {
-      container.innerHTML += `<div class="box loading"><img  height="100%" width="auto" src="images/${image}" alt="${image}"></div>`
-    }
+  const preloadImage = (src, callback) =>
+    new Promise(r => {
+      const image = new Image()
+      image.onload = r
+      image.onerror = r
+      image.src = src
+      image.classList.add('box')
+      image.onload = callback(image);
+    })
+
+  document.addEventListener('DOMContentLoaded', async function() {
+    await Promise.all(images.map(image => preloadImage(`images/${image}`, image => container.appendChild(image))))
   }, false);
 
 </script>
